Add placeholder navigation buttons

--- a/liked-songs.html
+++ b/liked-songs.html
@@ -10,7 +10,56 @@
     <body class="box-border m-0 font-sans">
         <section id="left-panel"></section>
         <section id="right-panel" class="p-8">
-            <nav id="navbar"></nav>
+            <nav id="navbar" class="mb-8">
+                <a
+                    href="#"
+                    class="navbar-navLink inline-block mr-2 fill-black hover:fill-zinc-500"
+                    id="nav-library">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="42"
+                        height="42"
+                        viewBox="0 0 50 50">
+                        <circle cx="25" cy="25" r="25" />
+                    </svg>
+                </a>
+                <a
+                    href="#"
+                    class="navbar-navLink inline-block mr-2 fill-black hover:fill-zinc-500"
+                    id="nav-search">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="42"
+                        height="42"
+                        viewBox="0 0 50 50">
+                        <circle cx="25" cy="25" r="25" />
+                    </svg>
+                </a>
+                <a
+                    href="#"
+                    class="navbar-navLink inline-block mr-2 fill-black hover:fill-zinc-500"
+                    id="nav-friends">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="42"
+                        height="42"
+                        viewBox="0 0 50 50">
+                        <circle cx="25" cy="25" r="25" />
+                    </svg>
+                </a>
+                <a
+                    href="#"
+                    class="navbar-navLink float-right inline-block mr-2 fill-black hover:fill-zinc-500"
+                    id="nav-settings">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="42"
+                        height="42"
+                        viewBox="0 0 50 50">
+                        <circle cx="25" cy="25" r="25" />
+                    </svg>
+                </a>
+            </nav>
             <div id="liked-songs-page">
                 <header class="flex flex-row items-center gap-6 mb-10">
                     <div
@@ -35,8 +84,8 @@
                                 class="libraryControlsPlay-playButton fill-black hover:fill-zinc-500 hover:cursor-pointer">
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
-                                    width="48"
-                                    height="48"
+                                    width="50"
+                                    height="50"
                                     viewBox="0 0 50 50">
                                     <circle cx="25" cy="25" r="25" class="fill-inherit" />
                                     <path
