Update library item text

--- a/liked-songs.html
+++ b/liked-songs.html
@@ -123,154 +123,259 @@
                     </div>
                     <div
                         class="library-grid grid grid-cols-3 md:grid-cols-6 lg:grid-cols-8 xl:grid-cols-10 gap-10">
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
-                        <div class="library-libraryItem hover:cursor-pointer">
+                        <div
+                            class="library-libraryItem libraryItem-song hover:cursor-pointer">
                             <img
                                 src="/assets/song-cover.jpg"
                                 alt="Album cover"
                                 class="library-libraryItem-cover w-full mb-4 rounded" />
-                            <div class="library-libraryItem-label leading-6">
-                                <p class="library-libraryItem-title text-2xl">Title</p>
-                                <p class="library-libraryItem-artist">Artist</p>
+                            <div class="library-libraryItem-label">
+                                <p
+                                    class="library-libraryItem-title text-base md:text-lg lg:text-xl">
+                                    Title
+                                </p>
+                                <p
+                                    class="library-libraryItem-artist text-sm md:text-base lg:text-lg">
+                                    Artist
+                                </p>
                             </div>
                         </div>
                     </div>
