--- a/music-player.html
+++ b/music-player.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div>
-            <div class="">
+            <div class="box-border m-0 font-sans">
                 <p>Title</p>
                 <p>Artist</p>
             </div>
